# details_app

./: .dockerignore  .gitignore  Dockerfile  README.md  TASKS.md  build.sh  details.py  docker-compose.yml  gunicorn_conf.py  pyproject.toml
src/details/: app.py
src/details/templates/: index.html
tests/: test_db_connection.py
