[tool.poetry]
name = "details"
version = "0.1.0"
description = ""
authors = ["Nimrod Fixel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
validators = "^0.28.3"
email-validator = "^2.2.0"
pyproject-toml = "^0.0.10"
python-dotenv = "^1.0.1"
pytest = "^8.3.2"
pytest-html = "^4.1.1"

[tool.poetry.dev-dependencies]
python = "^3.11.2"
pytest = "^8.3.2"
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
